098_bst_map/grade.txt
Grading at 11/15/2022:04:45:25.563673
For commit ID 298b67f4d188241428918a1b3f872bf4bd14aff7
Grading at Mon Nov 14 11:45:24 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = int]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid conversion from ‘BstMap<int, int>::Node*’ to ‘int’ [-fpermissive]
   54 |         return travesal;
      |                ^~~~~~~~
      |                |
      |                BstMap<int, int>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid initialization of reference of type ‘const std::__cxx11::basic_string<char>&’ from expression of type ‘BstMap<int, std::__cxx11::basic_string<char> >::Node*’
   54 |         return travesal;
      |                ^~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = Tester]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid initialization of reference of type ‘const Tester&’ from expression of type ‘BstMap<int, Tester>::Node*’
   54 |         return travesal;
      |                ^~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid conversion from ‘BstMap<std::__cxx11::basic_string<char>, int>::Node*’ to ‘int’ [-fpermissive]
   54 |         return travesal;
      |                ^~~~~~~~
      |                |
      |                BstMap<std::__cxx11::basic_string<char>, int>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid initialization of reference of type ‘const std::__cxx11::basic_string<char>&’ from expression of type ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node*’
   54 |         return travesal;
      |                ^~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid initialization of reference of type ‘const Tester&’ from expression of type ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node*’
   54 |         return travesal;
      |                ^~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = int]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid conversion from ‘BstMap<Tester, int>::Node*’ to ‘int’ [-fpermissive]
   54 |         return travesal;
      |                ^~~~~~~~
      |                |
      |                BstMap<Tester, int>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid initialization of reference of type ‘const std::__cxx11::basic_string<char>&’ from expression of type ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node*’
   54 |         return travesal;
      |                ^~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = Tester]’:
89-tester.cpp:119:24:   required from here
bstmap.h:54:16: error: invalid initialization of reference of type ‘const Tester&’ from expression of type ‘BstMap<Tester, Tester>::Node*’
   54 |         return travesal;
      |                ^~~~~~~~
The code did not compile.  This test failed.

Overall Grade: F
